# DualCam

./: CMakeLists.txt  CaptureBackend.cpp  CaptureBackend.h  DualCam.cpp  DualCam.h  MainWindow.cpp  MainWindow.h  README.md  capture_backend.h  core.cpp  core.h  exif_writer.cpp  exif_writer.h  main.cpp  mainwindow.cpp  mainwindow.h  metrics.7z  test_exif.cpp  viewer_dialogs.cpp  viewer_dialogs.h  viewer_main.cpp
